tests/ui/async-await/feature-async-closure.stderr
error[E0658]: async closures are unstable
  --> $DIR/feature-async-closure.rs:5:13
   |
LL |     let _ = async || {};
   |             ^^^^^
   |
   = note: see issue #62290 <https://github.com/rust-lang/rust/issues/62290> for more information
   = help: add `#![feature(async_closure)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: to use an async block, remove the `||`: `async {`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
